# University_project

./: .gitmodules  Controller_interface.py  README.md  Status_poll.py  User_interface.py  main_window.ui  smc100_new.py  test2.pyproject  widget.py
Lcard/: CMakeLists.txt  Lcard_wrapper.cpp  Lcard_wrapper.h  main.cpp  redis_wrapper.cpp  redis_wrapper.h
Lcard/Lcard_packs/: readme.txt
Lcard/Lcard_packs/include/: lpw25api.h  ltedsapi_stdtmpl.h  ltr010api.h  ltr01api.h  ltr021api.h  ltr114api.h  ltr11api.h  ltr12api.h  ltr210api.h  ltr212api.h  ltr216api.h  ltr22api.h  ltr24api.h  ltr25api.h  ltr27api.h  ltr34api.h  ltr35api.h  ltr41api.h  ltr42api.h  ltr43api.h  ltr51api.h  ltrapi.h  ltrapi_compat_defs.h  ltrapi_config.h  ltrapidefine.h  ltrapitypes.h  ltrk415api.h  ltrk416api.h  ltrk511api.h  ltrk71api.h  ltrs412api.h  ltrt10api.h  ltrt13api.h
Lcard/Lcard_packs/include/pascal/: ltr021api.pas  ltr114api.pas  ltr11api.pas  ltr212api.pas  ltr22api.pas  ltr27api.pas  ltr34api.pas  ltr41api.pas  ltr42api.pas  ltr43api.pas  ltr51api.pas  ltrapi.pas  ltrapidefine.pas  ltrapitypes.pas  readme.txt
Lcard/Lcard_packs/include/pascal2/: ltr210api.pas  ltr24api.pas  ltr25api.pas  ltrapi.pas  ltrapidefine.pas  ltrapitypes.pas  readme.txt
Lcard/Lcard_packs/lib/borland/: lpw25api.lib  ltedsapi.lib  ltr010api.lib  ltr01api.lib  ltr021api.lib  ltr030api.lib  ltr032api.lib  ltr114api.lib  ltr11api.lib  ltr12api.lib  ltr210api.lib  ltr212api.lib  ltr216api.lib  ltr22api.lib  ltr24api.lib  ltr25api.lib  ltr27api.lib  ltr34api.lib  ltr35api.lib  (+15 more)
Lcard/MQTT_Redis_Bridge/: main.py
(+78 files in other folders)
